[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Dialogues/Dialogue.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="Dialogue" type="VBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -484.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLeft" type="ColorRect" parent="Names"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
color = Color( 0.164706, 0.215686, 0.278431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLeft" type="Label" parent="Names/NameLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.933333, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalSpacer" type="ReferenceRect" parent="Names"]
margin_left = 204.0
margin_right = 1716.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
border_color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameRight" type="ColorRect" parent="Names"]
margin_left = 1720.0
margin_right = 1920.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
color = Color( 0.164706, 0.215686, 0.278431, 1 )

[node name="TextRight" type="Label" parent="Names/NameRight"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.933333, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainText" type="ColorRect" parent="."]
margin_top = 84.0
margin_right = 1920.0
margin_bottom = 484.0
rect_min_size = Vector2( 1640, 400 )
color = Color( 0.588235, 0.647059, 0.670588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextZone" type="RichTextLabel" parent="MainText"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
visible_characters = 0
__meta__ = {
"_edit_use_anchors_": false
}
